<resources>
    <string name="app_name">RoadQuest</string>
    <string name="title_activity_signup_screen">SignupScreen</string>
    <!-- Strings used for fragments for navigation -->

    <string name="no_account_label">Do not have an account yet?</string>
    <string name="account_exists_label">Already have an account?</string>
    <string name="title_activity_landing_screen">LandingScreen</string>
    <string name="hi_welcome_to_roadquest">Hi! Welcome to RoadQuest!</string>
    <string name="title_activity_start_session_screen">StartSessionScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="press_the_start_button_to_begin_phone_sensor_information_will_be_recorded_throughout_your_session">Press the Start button to begin. Phone sensor information will be recorded throughout your session.</string>
    <string name="roadquest_helps_assess_your_driving_skills_choose_an_option_to_get_started">RoadQuest helps assess your driving skills. Choose an option to get started!</string>
    <string name="when_you_re_ready_click_the_begin_session_button_to_record_your_driving_statistics_when_you_re_done_click_the_finish_session_button_to_save_your_records_you_can_always_view_your_past_and_recent_statistics_on_the_home_screen">When you\'re ready, click the Begin Session button to record your driving statistics. When you\'re done, click the Finish Session button to save your records. You can always view your past and recent statistics on the home screen.</string>
    <string name="start_a_session">Start a Session</string>
    <string name="start_session">Start Session</string>
    <string name="session_in_progress">Session in Progress</string>
    <string name="session_in_progress_spk">Session in Progress.</string>
    <string name="speed_lbl">Speed:</string>
    <string name="distance">Distance:</string>
    <string name="end_session">End Session</string>
    <string name="notice_dialog_resource">Notice</string>
    <string name="allow_location_permissions">Allow Location Permissions</string>
    <string name="allow_access_bttn_txt">Allow</string>
    <string name="deny_access_bttn_txt">Deny</string>
    <string name="the_session_has_been_terminated_and_the_information_has_been_saved">The session has been terminated, and the information has been saved.</string>
    <string name="confirm_bttn_txt">Confirm</string>
    <string name="settings_lbl_header">Settings</string>
    <string name="settings_desc_lbl">Modify specific settings pertaining to your account, or user experience.</string>
    <string name="these_are_the_registered_statistics_from_your_latest_driving_session">These are the registered statistics from your latest driving session</string>
    <!-- Strings used for fragments for navigation -->

</resources>