<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SessionMainUIScreen">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_in_progress"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="375dp"
        android:layout_height="500dp"
        android:layout_marginBottom="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/session_in_progress_spk">

    </com.google.android.gms.maps.MapView>

    <TextView
        android:id="@+id/speedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speed_lbl"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="250dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/mapView"/>

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="170dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/mapView"/>

    <Button
        android:id="@+id/endSessionBttn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_session"
        android:layout_marginStart="280dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintHorizontal_bias="0.0"

        />


</androidx.constraintlayout.widget.ConstraintLayout>